--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,6 +14,6 @@
     <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
     {{ with .Site.Params.favicon }}
-        <link rel="icon" type="image/ico" href="{{ . | absURL }}">
+        <link rel="icon" type="image/jpg" href="{{ . | absURL }}">
     {{ end }}
 </head>
