--- a/assets/sass/researcher.scss
+++ b/assets/sass/researcher.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 * {
-    font-family: "Inconsolata";
+    font-family: "Work Sans";
     line-height: normal;
 }
 .container {
